tests/parser/good/identifier.hel
// @name identifier
// @phase parser
// @expect success

x = y
