tests/parser/bad/operator_missing_operand.hel
// @name operator_missing_operand
// @phase parser
// @expect error

x = 1 +;
